@@ -34,6 +34,9 @@
 #define XWACOM_PARAM_DEBUGLEVEL 10
 #define XWACOM_PARAM_PRESSCURVE 11
 #define XWACOM_PARAM_RAWFILTER  12
+#define XWACOM_PARAM_MODE       13
+#define XWACOM_PARAM_SPEEDLEVEL 14
+#define XWACOM_PARAM_CLICKFORCE 15
 #define XWACOM_PARAM_XYDEFAULT  65
 #define XWACOM_PARAM_FILEMODEL  100
 #define XWACOM_PARAM_FILEOPTION 101
